adding custom modifiers and custom layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.learningcompose">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningCompose">
+        <activity
+            android:name=".CustomLayoutActivity"
+            android:exported="true"
+            android:label="@string/title_activity_custom_layout"
+            android:theme="@style/Theme.LearningCompose.NoActionBar" />
         <activity
             android:name=".ListActivity"
             android:exported="true"
@@ -38,5 +41,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
